syntax = "proto3";

package channel_member;

service ChannelMemberService {
  rpc AddMember (MemberRequest) returns (ChannelMemberResponse) {}
  rpc RemoveMember (MemberRequest) returns (ChannelMemberResponse) {}
  rpc SearchMember (SearchMemberRequest) returns (ChannelMemberListResponse) {}
}

message MemberRequest {
  string channelId = 1;
  string memberId = 2;
}

message SearchMemberRequest {
  string channelId = 1;
  string query = 2;
}

message ChannelMemberResponse {
  string message = 1;
}

message ChannelMemberInfo {
  string username = 1;
  string profilePic = 2;
  string createdAt = 3;
}

message ChannelMemberListResponse {
  repeated ChannelMemberInfo members = 1;
}